--- a/css/main.css
+++ b/css/main.css
@@ -5,9 +5,42 @@ body{
 }
 
 .field{
-	display: inline-block;
-	padding-top: 200px;
-	background-color: white;
-	height: 900px;
-	width: 100%;
+  background-color: white;
+  margin-top: 110px;
+  padding-left: 100px;
+  min-width: 1200px;
+  height: 500px;
+  position: relative;
+  z-index: 1;
+}
+p{
+	color:white;
+}
+
+.ryu {
+    width: 659px;
+    height: 494px;
+}
+.hadouken, .ryu-ready, .ryu-still, .ryu-throwing {
+  background-repeat: no-repeat;
+}
+.ryu-ready, .ryu-still, .ryu-throwing {
+  width: 659px;
+  height: 494px;
+}
+
+.ryu-ready, .ryu-throwing {
+  display: none;
+} 
+
+.ryu-ready {
+  background-image: url('../images/ryu-ready-position.gif');
+}
+
+.ryu-still {
+  background-image: url('../images/ryu-standing-still.png');
+}
+
+.ryu-throwing {
+  background-image: url('../images/ryu-throwing-hadouken.png');
 }
