--- a/css/main.css
+++ b/css/main.css
@@ -21,15 +21,15 @@ p{
     width: 659px;
     height: 494px;
 }
-.hadouken, .ryu-ready, .ryu-still, .ryu-throwing {
+.hadouken, .ryu-ready, .ryu-still, .ryu-throwing, .ryu-cool {
   background-repeat: no-repeat;
 }
-.ryu-ready, .ryu-still, .ryu-throwing {
+.ryu-ready, .ryu-still, .ryu-throwing, .ryu-cool {
   width: 659px;
   height: 494px;
 }
 
-.ryu-ready, .ryu-throwing {
+.ryu-ready, .ryu-throwing, .ryu-cool {
   display: none;
 } 
 
@@ -57,8 +57,4 @@ p{
   top: 160px;
   z-index: 10;
   left:600px;
-}
-
-* {
-  outline: red 1px solid;
 }
